--- a/ADONetHelper.Teradata.csproj
+++ b/ADONetHelper.Teradata.csproj
@@ -8,7 +8,7 @@
     <PackageProjectUrl>https://github.com/rgarrison12345/ADONetHelper.Teradata</PackageProjectUrl>
     <RepositoryUrl>https://github.com/rgarrison12345/ADONetHelper.Teradata.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <Version>1.4.8</Version>
+    <Version>1.4.9</Version>
     <PackageTags>Teradata Teradata.Client.Provider ORM ADO.NET ADO SQL .NET Database RDBMS Generic DAL ANSI</PackageTags>
     <Copyright>Copyright © Robert Garrison 2019</Copyright>
     <Authors>Robert Garrison</Authors>
@@ -19,7 +19,7 @@
     <IncludeSource>true</IncludeSource>
     <IncludeSymbols>true</IncludeSymbols>
     <Description>Extends ADONetHelper library for Teradata</Description>
-    <PackageReleaseNotes>Updating to ADONetHelper 3.2.1 and Teradata.Client.Provider 16.20.5</PackageReleaseNotes>
+    <PackageReleaseNotes>Updating to Teradata.Client.Provider 16.20.7</PackageReleaseNotes>
     <AssemblyName>ADONetHelper.Teradata</AssemblyName>
     <RootNamespace>ADONetHelper.Teradata</RootNamespace>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\ADONetHelper.Teradata.xml</DocumentationFile>
@@ -30,7 +30,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="LICENSE.md" Pack="true" PackagePath="LICENSE.md" />
-    <PackageReference Include="Teradata.Client.Provider" Version="16.20.5" />
+    <PackageReference Include="Teradata.Client.Provider" Version="16.20.7" />
     <PackageReference Include="ADONetHelper" version="3.2.1" />
   </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
